# PersonalStuff

./: .gitignore  .gitmodules  README.md  deploy_docs.ps1  echoFile.html  index.html
GCPDS/ANE2/maintenance/qualityAssurance/modules/spectrumAnalysis/narrowband/preprocess/IQmanagement/src/test/iqMethods/prslIQ/src/liquidSDR/: CMakeLists.txt  launch_build.bat
GCPDS/ANE2/maintenance/qualityAssurance/modules/spectrumAnalysis/narrowband/preprocess/IQmanagement/src/test/iqMethods/prslIQ/src/liquidSDR/docs/: RPI_DEPLOYMENT_GUIDE.md  RUNNING_SCRIPTS_WINDOWS.md
GCPDS/ANE2/maintenance/qualityAssurance/modules/spectrumAnalysis/narrowband/preprocess/IQmanagement/src/test/iqMethods/prslIQ/src/liquidSDR/docs/ai/: TASK_SUMMARY.md
GCPDS/ANE2/maintenance/qualityAssurance/modules/spectrumAnalysis/narrowband/preprocess/IQmanagement/src/test/iqMethods/prslIQ/src/liquidSDR/include/: liquid_bench.h
GCPDS/ANE2/maintenance/qualityAssurance/modules/spectrumAnalysis/narrowband/preprocess/IQmanagement/src/test/iqMethods/prslIQ/src/liquidSDR/scripts/: build_and_run.ps1  build_and_run.sh  deployRaspi.ps1  deployRaspi.sh  generate_report.py
GCPDS/ANE2/maintenance/qualityAssurance/modules/spectrumAnalysis/narrowband/preprocess/IQmanagement/src/test/iqMethods/prslIQ/src/liquidSDR/src/: liquid_method3.c  main.c  sigmf_io_liquid.c  welch_liquid.c
GCPDS/ANE2/maintenance/qualityAssurance/modules/spectrumAnalysis/narrowband/preprocess/IQmanagement/src/test/prslIQ/src/c/: CMakeLists.txt  build_and_run.ps1
GCPDS/ANE2/maintenance/qualityAssurance/modules/spectrumAnalysis/narrowband/preprocess/IQmanagement/src/test/prslIQ/src/c/docs/: DOCS_DEPLOYMENT.md  Doxyfile
GCPDS/ANE2/maintenance/qualityAssurance/modules/spectrumAnalysis/narrowband/preprocess/IQmanagement/src/test/prslIQ/src/c/docs/_build/html/: _r_e_a_d_m_e_8md.html  _s_o_u_r_c_e___r_e_f_e_r_e_n_c_e_8md.html  annotated_dup.js  dir_000002_000001.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen.css  fs__utils_8c__incl.map  fs__utils_8c__incl.md5  fs__utils_8c_a2f3c9b43c5441cd4a30a99f36cc76642_icgraph.map  fs__utils_8c_a2f3c9b43c5441cd4a30a99f36cc76642_icgraph.md5  fs__utils_8c_a613a5ac98863c1ec1037529ea5448dbc_cgraph.md5  functions.html  globals.html  (+78 more)
GCPDS/ANE2/maintenance/qualityAssurance/modules/spectrumAnalysis/narrowband/preprocess/IQmanagement/src/test/prslIQ/src/c/metrics/: qa_after.json  qa_after_v2.csv  qa_after_v2.json  qa_after_v3.csv
GCPDS/ANE2/maintenance/qualityAssurance/modules/spectrumAnalysis/narrowband/preprocess/IQmanagement/src/test/prslIQ/src/c/src/: main.c  profiler.c  sigmf_io.c
GCPDS/ANE2/maintenance/qualityAssurance/modules/spectrumAnalysis/narrowband/preprocess/src/test/prslIQ/src/c/: CMakeLists.txt  README.md  build_and_run.ps1  qa_after.csv  qa_after_v3.json
GCPDS/ANE2/maintenance/qualityAssurance/modules/spectrumAnalysis/narrowband/preprocess/src/test/prslIQ/src/c/docs/: SOURCE_REFERENCE.md
GCPDS/ANE2/maintenance/qualityAssurance/modules/spectrumAnalysis/narrowband/preprocess/src/test/prslIQ/src/c/include/: iq_bench.h
GCPDS/ANE2/maintenance/qualityAssurance/modules/spectrumAnalysis/narrowband/preprocess/src/test/prslIQ/src/c/src/: fs_utils.c  main.c  method3.c  profiler.c  sigmf_io.c  welch.c
(+433 files in other folders)
